@@ -74,10 +74,10 @@ opt_install_dir=${opt_install_dir:-$(pwd)/herc4x}
 # Regina download
 opt_regina_dir="Regina-REXX-3.6"
 opt_regina_tarfile="Regina-REXX-3.6.tar.gz"
-opt_regina_url="http://www.wrljet.com/ibm360/Regina-REXX-3.6.tar.gz"
-# opt_regina_dir="regina-rexx-3.9.3"
-# opt_regina_tarfile="regina-rexx-3.9.3.tar.gz"
-# opt_regina_url="http://www.wrljet.com/ibm360/regina-rexx-3.9.3.tar.gz"
+opt_regina_url="https://gist.github.com/wrljet/053c3bab74910d42f8775841fcc6fd3f/raw/fe7d723509356ebb77d1eb4593f15dda941949da/Regina-REXX-3.6.tar.gz"
+# opt_regina_dir="Regina-REXX-3.9.3"
+# opt_regina_tarfile="Regina-REXX-3.9.3.tar.gz"
+# opt_regina_url="https://gist.github.com/wrljet/dd19076064da7c3dea1aa9614fc37511/raw/e842479d63fae7af79d4aec467b8fdb148ca196a/Regina-REXX-3.9.3.tar.gz"
 
 # Configure optimization override
 # Example for Raspberry Pi 4B:
