@@ -21,6 +21,10 @@ opt_regina_url="https://gist.github.com/wrljet/dd19076064da7c3dea1aa9614fc37511/
 # Bill Lewis  bill@wrljet.com
 
 
+# Custom build message
+# n.b. the version number will be tacked on the end
+opt_custom_build_msg="Built for you with Hercules-Helper"
+
 # Git repo for SDL-Hercules
 git_repo_hercules=https://github.com/SDL-Hercules-390/hyperion.git
 
